--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registration Success</title>
 </head>
 <body>
-<div each = "el : ${users}}">
-    <h1 text = "${el.name}"></h1>
-</div>
+<h1>Registration Successful!</h1>
+<p>${message}</p>
 </body>
 </html>
